# PFC-2-code

./: .Rhistory  README.md  main.py  requirements.txt  run_sa.sh
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
aws/: Dockerfile  README.md  build_and_push.sh  collect_results.py  entrypoint.sh  generate_aws_config.py  instances.txt  job_config.env  setup_batch.sh  submit_jobs.sh
best_solutions/: andre_feijo.csv
datasets/a/: instance_0002.txt  instance_0003.txt  instance_0004.txt  instance_0005.txt  instance_0006.txt  instance_0007.txt  instance_0008.txt  instance_0009.txt  instance_0010.txt  instance_0011.txt  instance_0012.txt  instance_0013.txt  instance_0014.txt  instance_0015.txt  instance_0016.txt  instance_0017.txt  (+3 more)
docs/: AisleFirst.md  ILS.md  SA.md  SimpleHeuristic.md
irace/: .Rhistory  parameters.txt  scenario.txt  target-runner
notebooks/: analise_resultados.ipynb  compare.ipynb
project/: config.json
project/algos/: CMakeLists.txt  Makefile  algo_runner  algo_runner.cpp  grasp.cpp  grasp.hpp  simple_heuristic.cpp  simulated_annealing.cpp  simulated_annealing.hpp
project/algos/simple/: min_aisle_cover.cpp  simple_heuristic.cpp  simple_heuristic.hpp
project/algos_cpp/spo/: CMakeLists.txt  Makefile
project/algos_cpp/spo/include/: bsearch.hpp  hybrid.hpp  instance.hpp  max_subset_sum.hpp  par_it.hpp  preprocessing.hpp  ref_lin.hpp  solution.hpp  solve_f.hpp  tabu_search.hpp
project/algos_cpp/spo/src/: bsearch.cpp  hybrid.cpp  instance.cpp  main.cpp  max_subset_sum.cpp  par_it.cpp  preprocessing.cpp  ref_lin.cpp  solve_f.cpp  tabu_search.cpp
(+13543 files in other folders)
